--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,29 @@
+/*buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'me.tatarka:gradle-retrolambda:1.1.1'
+    }
+}*/
+
+repositories {
+    mavenCentral()
+}
+
 apply plugin: 'android'
 
+//apply plugin: 'retrolambda'
+
 android {
+    /*compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }*/
+
     compileSdkVersion 19
-    buildToolsVersion "19.0.1"
+    buildToolsVersion '19.0.1'
 
     defaultConfig {
         minSdkVersion 8
@@ -22,4 +43,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:+'
     compile fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
     compile 'com.squareup.retrofit:retrofit:1.4.1'
+    compile 'com.jakewharton:butterknife:4.0.+'
+    compile 'com.github.frankiesardo:icepick:2.3.1'
+    compile 'com.squareup.picasso:picasso:2.2.0'
+    provided 'com.github.frankiesardo:icepick-processor:2.3.1'
 }
