Last usage in preferences, packages refactoring

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".SearchService" />
+        <service android:name=".service.SearchService" />
 
 
     </application>
