--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:4.0.+'
     compile 'com.github.frankiesardo:icepick:2.3.1'
     compile 'com.squareup.picasso:picasso:2.2.0'
+    compile 'de.greenrobot:eventbus:2.2.0'
     provided 'com.github.frankiesardo:icepick-processor:2.3.1'
 
     compile 'com.squareup.dagger:dagger-compiler:1.2.1'
