--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,9 +23,9 @@ android {
 }
 
 dependencies {
+    compile project(':model')
     compile 'com.android.support:appcompat-v7:+'
     compile fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
-    compile 'com.squareup.retrofit:retrofit:1.4.1'
     compile 'com.jakewharton:butterknife:4.0.+'
     compile 'com.github.frankiesardo:icepick:2.3.1'
     compile 'com.squareup.picasso:picasso:2.2.0'
