--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/services/javax.annotation.processing.Processor'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
 }
 
 dependencies {
@@ -27,9 +32,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:+'
     compile fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
     compile 'com.jakewharton:butterknife:4.0.+'
-    compile 'com.github.frankiesardo:icepick:2.3.1'
     compile 'com.squareup.picasso:picasso:2.2.0'
-    provided 'com.github.frankiesardo:icepick-processor:2.3.1'
 
     androidTestCompile 'com.squareup:fest-android:1.0.+'
     androidTestCompile 'com.google.dexmaker:dexmaker:1.0'
