--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,10 @@ android {
     packagingOptions {
         exclude 'META-INF/services/javax.annotation.processing.Processor'
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
