--- a/.travis.yml
+++ b/.travis.yml
@@ -31,4 +31,4 @@ before_script:
   - adb shell input keyevent 82 &
 
 script:
-  - ./gradlew connectedAndroidTest
+  - ./gradlew clean connectedAndroidTest
