--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,12 @@ android {
         versionName "1.0"
     }
     buildTypes {
+        /*debug {
+            runProguard true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+        }*/
         release {
-            runProguard false
+            runProguard true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
