--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,31 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'me.tatarka:gradle-retrolambda:1.3.0'
+    }
+}
+
 repositories {
     mavenCentral()
 }
 
 apply plugin: 'android'
 
+apply plugin: 'retrolambda'
+
+retrolambda {
+    jdk '/Library/Java/JavaVirtualMachines/jdk1.8.0.jdk/Contents/Home/'
+}
+
 android {
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     compileSdkVersion 19
     buildToolsVersion '19.0.1'
 
