--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,29 +6,29 @@ apply plugin: 'android'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion '19.0.1'
+    buildToolsVersion '19.0.3'
 
     defaultConfig {
         minSdkVersion 8
         targetSdkVersion 19
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "com.google.android.apps.common.testing.testrunner.GoogleInstrumentationTestRunner"
     }
     buildTypes {
-        /*debug {
-            runProguard true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
-        }*/
         release {
             runProguard true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+
     packagingOptions {
         exclude 'META-INF/services/javax.annotation.processing.Processor'
         exclude 'META-INF/LICENSE.txt'
+        exclude 'LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
     }
+
     lintOptions {
         abortOnError false
     }
@@ -41,10 +41,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:4.0.+'
     compile 'com.squareup.picasso:picasso:2.2.0'
 
-    androidTestCompile 'com.squareup:fest-android:1.0.+'
-    androidTestCompile 'com.google.dexmaker:dexmaker:1.0'
-    androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.0'
-    androidTestCompile 'org.mockito:mockito-core:1.9.5'
-    androidTestCompile 'com.jayway.android.robotium:robotium-solo:4.3.1'
-    androidTestCompile 'com.squareup.spoon:spoon-client:1.0.5'
+    androidTestCompile 'com.jakewharton.espresso:espresso:1.1-r2'
 }
