--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,7 @@ dependencies {
     compile 'com.squareup.dagger:dagger-compiler:1.2.1'
     compile 'com.squareup.dagger:dagger:1.2.1'
 
-    androidTestCompile 'com.jakewharton.espresso:espresso:1.1-r2'
+    androidTestCompile('com.jakewharton.espresso:espresso:1.1-r2') {
+        exclude group: 'com.squareup.dagger'
+    }
 }
