--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,18 @@ repositories {
     mavenCentral()
 }
 
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:0.9.+'
+        classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.9.+'
+    }
+}
+
+apply plugin: 'android-sdk-manager'
+
 apply plugin: 'android'
 
 android {
