--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'android'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion '19.0.3'
+    buildToolsVersion '19.1.0'
 
     defaultConfig {
         minSdkVersion 8
@@ -54,8 +54,11 @@ dependencies {
     compile 'com.android.support:appcompat-v7:+'
     compile fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
     compile 'com.jakewharton:butterknife:5.0.+'
-    compile 'com.squareup.picasso:picasso:2.2.0'
+    compile 'com.squareup.picasso:picasso:2.3.+'
     compile 'com.squareup:otto:1.3.4'
+
+    compile 'com.squareup.okhttp:okhttp:1.6.+'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:1.6.+'
 
     compile 'com.squareup.dagger:dagger-compiler:1.2.1'
     compile 'com.squareup.dagger:dagger:1.2.1'
