--- a/model/build.gradle
+++ b/model/build.gradle
@@ -4,7 +4,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.10'
     compile 'com.google.android:android:2.2.1'
-    compile 'com.squareup.retrofit:retrofit:1.4.1'
-    compile 'org.parceler:parceler:0.2.8'
-    compile 'org.parceler:parceler-api:0.2.8'
+    compile 'com.squareup.retrofit:retrofit:1.6.+'
+    compile 'org.parceler:parceler:0.2.9'
+    compile 'org.parceler:parceler-api:0.2.9'
 }
