--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ buildscript {
 
 apply plugin: 'android-sdk-manager'
 
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 19
@@ -51,7 +51,7 @@ android {
 
 dependencies {
     compile project(':model')
-    compile 'com.android.support:appcompat-v7:+'
+    compile 'com.android.support:appcompat-v7:20.+'
     compile fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
     compile 'com.jakewharton:butterknife:5.0.+'
     compile 'com.squareup.picasso:picasso:2.3.+'
