--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,8 @@ android {
 dependencies {
     compile project(':model')
     compile 'com.android.support:appcompat-v7:20.+'
+    compile 'com.android.support:recyclerview-v7:+'
+    compile 'com.android.support:cardview-v7:+'
     compile fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
     compile 'com.jakewharton:butterknife:5.0.+'
     compile 'com.squareup.picasso:picasso:2.3.+'
