--- a/model/build.gradle
+++ b/model/build.gradle
@@ -1,11 +1,17 @@
-apply plugin: 'java'
+apply plugin: 'com.android.library'
+
+android {
+    compileSdkVersion 20
+    buildToolsVersion "20.0.0"
+    defaultConfig {
+        minSdkVersion 14
+    }
+}
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.10'
-    compile 'com.google.android:android:2.2.1'
+    //testCompile 'junit:junit:4.10'
     compile 'com.squareup.retrofit:retrofit:1.6.+'
-    compile 'org.parceler:parceler:0.2.9'
-    compile 'org.parceler:parceler-api:0.2.9'
     compile 'com.netflix.rxjava:rxjava-android:0.20.3'
+    compile 'org.parceler:parceler-api:0.2.12'
 }
