--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,10 +27,6 @@ android {
         testInstrumentationRunner "com.google.android.apps.common.testing.testrunner.GoogleInstrumentationTestRunner"
     }
     buildTypes {
-        debug {
-            testCoverageEnabled true
-        }
-
         release {
             runProguard false
             //proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
@@ -42,6 +38,7 @@ android {
         exclude 'META-INF/LICENSE.txt'
         exclude 'LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/beans.xml'
     }
 
     lintOptions {
@@ -51,14 +48,14 @@ android {
 
 dependencies {
     compile project(':model')
-    compile 'com.android.support:appcompat-v7:20.+'
+    compile 'com.android.support:appcompat-v7:20.0.0'
     compile fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
-    compile 'com.jakewharton:butterknife:5.0.+'
-    compile 'com.squareup.picasso:picasso:2.3.+'
-    compile 'com.squareup:otto:1.3.4'
+    compile 'com.jakewharton:butterknife:5.1.2'
+    compile 'com.squareup.picasso:picasso:2.3.4'
+    compile 'com.squareup:otto:1.3.5'
 
-    compile 'com.squareup.okhttp:okhttp:1.6.+'
-    compile 'com.squareup.okhttp:okhttp-urlconnection:1.6.+'
+    compile 'com.squareup.okhttp:okhttp:2.0.0'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
 
     compile 'com.squareup.dagger:dagger-compiler:1.2.1'
     compile 'com.squareup.dagger:dagger:1.2.1'
