--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,15 @@ buildscript {
     }
     dependencies {
         classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.10.+'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
     }
 }
 
 apply plugin: 'android-sdk-manager'
 
 apply plugin: 'com.android.application'
+
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 19
@@ -54,11 +57,11 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.3.4'
     compile 'com.squareup:otto:1.3.5'
 
+    apt 'org.parceler:parceler:0.2.12'
+    compile 'org.parceler:parceler-api:0.2.12'
+
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
-
-    compile 'com.squareup.dagger:dagger-compiler:1.2.1'
-    compile 'com.squareup.dagger:dagger:1.2.1'
 
     androidTestCompile 'com.google.dexmaker:dexmaker:1.0'
     androidTestCompile('com.google.dexmaker:dexmaker-mockito:1.0') {
