--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,13 +51,14 @@ android {
 
 dependencies {
     compile project(':model')
-    compile 'com.android.support:appcompat-v7:20.+'
+    compile 'com.android.support:appcompat-v7:20.0.0'
     compile fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
     compile 'com.jakewharton:butterknife:5.1.2'
     compile 'com.squareup.picasso:picasso:2.3.4'
     compile 'com.squareup:otto:1.3.5'
 
-    compile 'com.squareup.dagger:dagger-compiler:1.2.1'
+    apt 'com.squareup.dagger:dagger-compiler:1.2.1'
+    androidTestApt 'com.squareup.dagger:dagger-compiler:1.2.1'
     compile 'com.squareup.dagger:dagger:1.2.1'
 
     apt 'org.parceler:parceler:0.2.12'
