Introduced ObjectSaver to decouple controller from Bundle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     compile 'com.squareup.dagger:dagger:1.2.1'
 
     apt 'org.parceler:parceler:0.2.12'
+    compile 'org.parceler:parceler-api:0.2.12'
 
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
