--- a/mvc/build.gradle
+++ b/mvc/build.gradle
@@ -1,26 +1,7 @@
-apply plugin: 'com.android.library'
-
-android {
-    compileSdkVersion 20
-    buildToolsVersion "20.0.0"
-
-    defaultConfig {
-        applicationId "it.cosenonjaviste.testableandroidapps.mvc"
-        minSdkVersion 9
-        targetSdkVersion 20
-        versionCode 1
-        versionName "1.0"
-    }
-    buildTypes {
-        release {
-            runProguard false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-}
+apply plugin: 'java'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:20.0.0'
     compile project(':model')
+    testCompile 'junit:junit:4.10'
 }
