--- a/.travis.yml
+++ b/.travis.yml
@@ -6,22 +6,13 @@ android:
 env:
   matrix:
     - ANDROID_TARGET=android-19  ANDROID_ABI=armeabi-v7a
-before_install:
-# for gradle output style
-  - export TERM=dumb
 
-  # environment info
-  - ./gradlew -v
-  - uname -a
-
+before_script:
   # Create and start emulator
   - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
-
-before_script:
-  - adb wait-for-device
+  - /usr/local/bin/android-wait-for-emulator
   - adb shell input keyevent 82 &
-
 
 script:
   - ./gradlew connectedAndroidTest
